--- a/generators/component/Component.tsx.hbs
+++ b/generators/component/Component.tsx.hbs
@@ -1,10 +1,10 @@
 import React from "react";
 
-export interface Props {
+export interface {{properCase name}}Props {
   exampleProp: string;
 }
 
-export const Button = ({ exampleProp }: Props): JSX.Element => (
+export const {{properCase name}} = ({ exampleProp }: {{properCase name}}Props): JSX.Element => (
   <button type="button" className="bg-red-400 font-bold border-2">
     {exampleProp}
   </button>
