story w/ useParams and better route architecture

--- a/generators/feature/Component.stories.tsx.hbs
+++ b/generators/feature/Component.stories.tsx.hbs
@@ -4,13 +4,14 @@ import React from "react";
 import { {{properCase componentName}}, {{properCase componentName}}Props } from "./{{properCase componentName}}";
 
 const meta: Meta = {
-  title: "Components/{{properCase componentName}}",
+  title: "Features/{{properCase componentName}}",
   component: {{properCase componentName}},
   parameters: {
     controls: { expanded: true },
   },
 };
 
+// eslint-disable-next-line import/no-default-export
 export default meta;
 
 const Template: Story<{{properCase componentName}}Props> = ({ exampleProp }: {{properCase componentName}}Props) => (
