--- a/generators/component/Component.stories.tsx.hbs
+++ b/generators/component/Component.stories.tsx.hbs
@@ -11,6 +11,7 @@ const meta: Meta = {
   },
 };
 
+// eslint-disable-next-line import/no-default-export
 export default meta;
 
 const Template: Story<{{properCase componentName}}Props> = ({ exampleProp }: {{properCase componentName}}Props) => (
